comments, hero banner video cover

--- a/views/heroslider.ejs
+++ b/views/heroslider.ejs
@@ -22,11 +22,11 @@
      
           </div>
           
-        </div><video id="background-video" autoplay loop muted poster="/stylesheets/videos/coach.mp4">
+        </div>
+        <div id="top-banner-2" class="banner">
+          <video id="background-video" autoplay loop muted poster="/stylesheets/videos/coach.mp4">
             <source src="/stylesheets/videos/coach1.mp4" type="video/mp4">
           </video> 
-        <div id="top-banner-2" class="banner">
-          
           <div class="banner-inner-wrapper">
  
             <div class="line"></div>
