--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,26 +1,26 @@
 <link rel="stylesheet" href="/stylesheets/navbar.css" />
 
+
+<!-- Header die de navigatie en het hamburger-icoon bevat -->
 <header>
-  <!--HamBurger Icon-->
+  <!-- Hamburger-icoon -->
   <div class="bars" id="nav-action">
-    <span class="bar"> </span>
+    <span class="bar"></span>
   </div>
 
-  <!--Navbar Links-->
+  <!-- Navigatielist -->
   <nav id="nav">
     <ul class="navlist">
       <li class="shape-circle circle-one">
-        <a href="/overzicht">Overzicht</a>
+        <a href=/overzicht.ejs>Overzicht</a>
       </li>
-
       <li class="shape-circle circle-two">
-        <a href="/trendingworkouts.ejs">Trending Workouts</a>
+<a href="http://localhost:3000/overzicht">
+        Trending Workouts</a>
       </li>
-
       <li class="shape-circle circle-three">
         <a href="/login">Login</a>
       </li>
-
       <li class="shape-circle circle-five">
         <a href="/">Home</a>
       </li>
@@ -28,4 +28,8 @@
   </nav>
 </header>
 
+
 <script src="/stylesheets/scripts/index.js"></script>
+
+
+
