--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -1,17 +1,8 @@
 <link rel="stylesheet" href="/stylesheets/workoutslider.css" />
 <link rel="stylesheet" href="/stylesheets/styles.css" />
 
-
 <div class="textsliders">
   <h3>Trending <span>workouts</span></h3>
-
-  <!-- <p>
-    Ontdek de trending workouts op FitBuddy en geef je fitnessroutine een boost. Van intensieve HIIT-sessies die je vetverbranding maximaliseren, tot ontspannende yoga en pilates voor een betere flexibiliteit en balans. 
-  </p>
-
-    <p>Voor kracht en spieropbouw biedt FitBuddy diverse krachttraining-routines, geschikt voor elk niveau. Daarnaast zijn er dynamische bodyweight-oefeningen die je overal kunt doen.</p>
-
-    <p>Met FitBuddy blijf je gemotiveerd en haal je het beste uit jezelf, altijd en overal!</p> -->
 </div>
 
 <div class="accordion">
@@ -28,13 +19,13 @@
               <div class="col-sm-4">
                 <h3>Benchpress</h3>
                 <p>
-                  De Bench Press is ideaal voor het opbouwen van sterke borst-, schouder- en armspieren. Druk de halter omhoog terwijl je op een bank ligt. Perfect voor kracht en spiermassa.
+                  De Bench Press is ideaal voor het opbouwen van sterke borst-,
+                  schouder- en armspieren. Druk de halter omhoog terwijl je op
+                  een bank ligt. Perfect voor kracht en spiermassa.
                 </p>
               </div>
-              <div class="col-sm-8 text-center">
-                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" /> -->
-              </div>
+
+              <div class="col-sm-8 text-center"></div>
             </div>
           </div>
         </a>
@@ -53,13 +44,12 @@
               <div class="col-sm-4">
                 <h3>Crunches</h3>
                 <p>
-                  Crunches versterken je buikspieren. Lig op je rug, til je schouders van de grond en span je buikspieren aan. Perfect voor een strakke core.
+                  Crunches versterken je buikspieren. Lig op je rug, til je
+                  schouders van de grond en span je buikspieren aan. Perfect
+                  voor een strakke core.
                 </p>
               </div>
-              <div class="col-sm-8 text-center">
-                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" /> -->
-              </div>
+              <div class="col-sm-8 text-center"></div>
             </div>
           </div>
         </a>
@@ -77,13 +67,13 @@
               <div class="col-sm-4">
                 <h3>Pull up</h3>
                 <p>
-                  Versterk je rugspieren met oefeningen zoals de deadlift, bent-over row, en pull-ups. Deze bewegingen verbeteren je houding en algehele kracht. Perfect voor een sterke, gezonde rug.
+                  Versterk je rugspieren met oefeningen zoals de deadlift,
+                  bent-over row, en pull-ups. Deze bewegingen verbeteren je
+                  houding en algehele kracht. Perfect voor een sterke, gezonde
+                  rug.
                 </p>
               </div>
-              <div class="col-sm-8 text-center">
-                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" /> -->
-              </div>
+              <div class="col-sm-8 text-center"></div>
             </div>
           </div>
         </a>
@@ -107,10 +97,7 @@
                   workout to boost the energy bla bla bla
                 </p>
               </div>
-              <div class="col-sm-8 text-center">
-                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" /> -->
-              </div>
+              <div class="col-sm-8 text-center"></div>
             </div>
           </div>
         </a>
@@ -128,13 +115,13 @@
               <div class="col-sm-4"></div>
               <h2>Bulgarian splitsquat</h2>
               <p>
-                De Bulgarian Split Squat is een top oefening voor sterke benen en bilspieren. Plaats één voet achter je op een verhoging en zak door je knie. Deze oefening verbetert kracht, balans en stabiliteit. Voeg hem toe aan je routine voor snelle resultaten!
+                De Bulgarian Split Squat is een top oefening voor sterke benen
+                en bilspieren. Plaats één voet achter je op een verhoging en zak
+                door je knie. Deze oefening verbetert kracht, balans en
+                stabiliteit. Voeg hem toe aan je routine voor snelle resultaten!
               </p>
 
-              <div class="col-sm-8 text-center">
-                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" /> -->
-              </div>
+              <div class="col-sm-8 text-center"></div>
             </div>
           </div>
         </a>
