--- a/public/stylesheets/heroslider.css
+++ b/public/stylesheets/heroslider.css
@@ -206,11 +206,13 @@ from {margin-left: -100%;}
 to {margin-left: 0;}
 }
 #background-video{
-
-
-		object-fit:cover;
-		
-
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+object-fit: cover;
+z-index: -1;
 	}
 
 
@@ -313,3 +315,18 @@ border: none;
 	
 	
 	}
+	#top-banner-2{
+	background: none;
+	position: relative;
+}
+
+
+
+
+
+
+
+
+
+
+
