--- a/public/stylesheets/ourstory.css
+++ b/public/stylesheets/ourstory.css
@@ -1,149 +1,138 @@
 .aboutus {
-	/* background: #000000; */
-	margin: 3em 3em 3em 3em;
-	/* padding: 3em; */
+    /* Achtergrondkleur, marges en padding voor de sectie */
+    /* background: #000000; */
+    margin: 3em 3em 3em 3em;
+    /* padding: 3em; */
 }
 
+/* Binnenste div voor het instellen van de breedte en eventueel gebruik van een grid */
 .aboutus .outer {
-
-	width: 80vw;
-	/* display: grid;
-	grid-template-columns: 1fr 1fr; */
+    width: 80vw;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
 }
 
+/* Afbeeldingsstijlen, zoals breedte en uitlijning */
 .aboutus img {
-	width: 100%;
-
+    width: 100%;
 }
 
-
-
+/* Stijlen voor de kop en eventuele subelementen */
 .aboutus h3,
 span {
-	color: #ffffff;
-	font-family: monument extended, sans-serif;
-	font-size: 5vw;
-	display: flex;
-	text-transform: uppercase;
+    color: #ffffff;
+    font-family: monument extended, sans-serif;
+    font-size: 5vw;
+    display: flex;
+    text-transform: uppercase;
 }
 
+/* Aanvullende stijlen voor specifieke delen van de tekst */
 .aboutus h3 span {
-	color: var(--accent-kleur);
-	margin-left: 0.3em;
+    color: var(--accent-kleur);
+    margin-left: 0.3em;
 }
 
+/* Stijlen voor paragrafen, inclusief lettergrootte en lijnhoogte */
 .aboutus p {
-	font-size: 0.5vw;
-	line-height: 1.4;
-	font-size: 3vw;
+    font-size: 0.5vw;
+    line-height: 1.4;
+    font-size: 3vw;
 }
 
+/* Aanpassingen aan de tweede paragraaf */
 .aboutus p:nth-of-type(2) {
-	margin-top:1em;
+    margin-top: 1em;
 }
 
-
+/* Stijlen voor de knop, zoals uitlijning en marges */
 .aboutus .button {
-	display: flex;
-	margin-top: 2em;
-	justify-content: center;
+    display: flex;
+    margin-top: 2em;
+    justify-content: center;
 }
 
+/* Media query voor aanpassingen op kleinere schermen */
+@media screen and (min-width: 610px) {
+    /* Grid-layout en extra marge tussen elementen */
+    .aboutus .outer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3em;
+    }
 
-@media screen and (min-width:610px) {
-	.aboutus .outer {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 3em;
-	}
+    /* Aanpassingen aan de afbeelding voor een betere uitlijning */
+    .aboutus img {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+        margin-left: 8vw;
+    }
 
+    /* Stijlen voor paragrafen op grotere schermen */
+    .aboutus p {
+        display: inline-block;
+        width: 100%;
+        margin-right: 20em;
+        font-size: 1.5vw;
+    }
 
-	.aboutus img {
-		display: flex;
-		justify-content: flex-end;
-		width: 100%;
-		margin-left: 8vw;
-	}
-
-
-	.aboutus p {
-		display: inline-block;
-		width: 100%;
-		margin-right: 20em;
-
-		font-size: 1.5vw;
-	}
-
-	.aboutus .button {
-		display: flex;
-		justify-content: flex-end;
-	}
-	
+    /* Aanpassingen voor de knoppen op grotere schermen */
+    .aboutus .button {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
 
-
-
-
-
-/* buttons */
-
-
+/* Stijlen voor knoppen en hun effecten */
 .learn-more-button button {
-	margin-top: 5px;
-	padding: 10px 90px;
-
-	cursor: pointer;
-	font-weight: 500;
-	font-size: 1em;
-
-	margin-top: 50px;
-
-	display: flex;
-	justify-content: end;
+    /* Knopstijlen, inclusief marges, lettergrootte en cursor */
+    margin-top: 5px;
+    padding: 10px 90px;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 1em;
+    margin-top: 50px;
+    display: flex;
+    justify-content: end;
 }
 
 .learn-more-button {
-	display: flex;
-	justify-content: end;
+    /* Stijlen voor de knoppen, inclusief uitlijning */
+    display: flex;
+    justify-content: end;
 }
 
-
-/* PIERWSZY SPOSOB WYKORZYSTANIE CIENIA */
-.first{
-	color: #404040;
-	border-radius: 50px 0px 0px 50px;
-
-	
-	border: none;
-	
-	background: #f2bf33;
-	box-shadow: inset 0px 0px 0px 0px rgb(18, 6, 6);
-	transition: all 0.5s ease-in-out;		
-
-}
-.first:hover{
-	box-shadow: inset 0px -200px 0px 0px rgb(255, 255, 255);
+/* Stijlen voor specifieke knopeffecten */
+.first {
+    /* Achtergrond, randradius, kleur en overgangen */
+    color: #404040;
+    border-radius: 50px 0px 0px 50px;
+    border: none;
+    background: #f2bf33;
+    box-shadow: inset 0px 0px 0px 0px rgb(18, 6, 6);
+    transition: all 0.5s ease-in-out;
 }
 
-/* DRUGI SPOSOB DLUZSZY ALE BARDZIEJ UNIWERSALNY*/
-.sec{
-	
-	margin-top: 10px;
-	border: none;
-	
-	background:		#f2bf33;
-	box-shadow: inset 0px 0px 0px 0px rgb(18, 6, 6);
-	transition: all 0.5s ease-in-out;		
-	color: #404040;
-
-
-border: none;
-	border-radius: 5px 50px 50px 0px;
-
+.first:hover {
+    /* Hover effect met schaduwverandering */
+    box-shadow: inset 0px -200px 0px 0px rgb(255, 255, 255);
 }
 
+/* Aanvullende stijlen voor een andere knopstijl */
+.sec {
+    margin-top: 10px;
+    border: none;
+    background: #f2bf33;
+    box-shadow: inset 0px 0px 0px 0px rgb(18, 6, 6);
+    transition: all 0.5s ease-in-out;
+    color: #404040;
+    border: none;
+    border-radius: 5px 50px 50px 0px;
+}
 
-.sec:hover{
-	box-shadow: inset 0px -200px 0px 0px rgb(255, 255, 255);
-	color: var(--main-tint);
+.sec:hover {
+    /* Hover effect met schaduwverandering en kleurverandering */
+    box-shadow: inset 0px -200px 0px 0px rgb(255, 255, 255);
+    color: var(--main-tint);
 }
