--- a/views/heroslider.ejs
+++ b/views/heroslider.ejs
@@ -27,7 +27,7 @@
               <!-- Tweede banner -->
               <div id="top-banner-2" class="banner">
                   <div class="banner-inner-wrapper">
-                      <div class="line"></div>
+                
                   </div>
               </div>
               <!-- Derde banner -->
@@ -49,9 +49,9 @@
       <article id="idk">
           <div class="controls">
               <label for="banner1"><span class="progressbar"></span>START</label>
-              <label for="banner2"><span class="progressbar"></span>SPORTING</label>
-              <label for="banner3"><span class="progressbar"></span>TODAY</label>
-              <label for="banner4"><span class="progressbar"></span>!<Contacts</label>
+              <label for="banner2"><span class="progressbar"></span>Home</label>
+              <label for="banner3"><span class="progressbar"></span>Training</label>
+              <label for="banner4"><span class="progressbar"></span>Today!</label>
           </div>
       </article>
   </section>
