--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -12,10 +12,10 @@
   <nav id="nav">
     <ul class="navlist">
       <li class="shape-circle circle-one">
-        <a href=/overzicht.ejs>Overzicht</a>
+        <a href=/overzicht>Overzicht</a>
       </li>
       <li class="shape-circle circle-two">
-<a href="http://localhost:3000/overzicht">
+<a href="/overzicht">
         Trending Workouts</a>
       </li>
       <li class="shape-circle circle-three">
