--- a/public/stylesheets/heroslider.css
+++ b/public/stylesheets/heroslider.css
@@ -17,7 +17,7 @@
 	--content-font: ('Monument Extended'font-weight:400;);
 	--h3-font: ('Monument Extended', );
 	--main-color: #fff;
-	--icon-color: #95e1d3;
+
 
   }
 
@@ -54,14 +54,14 @@ body{
 				left: 0%;
 				opacity: 0;
 				z-index: 0;
-				width: inherit;
-				height: inherit;
+				width: 100%;
+				height: 100%;
 				background-repeat: no-repeat;
 				background-position: 50% 50%;
-				transition: all .5s ease;
+				transition: opacity .5s ease;
 				.banner-inner-wrapper {
 					height: 100%;
-				
+				padding: 25px;
 					box-sizing: border-box;
 					h1 {
 						padding-bottom: 0.3em;
@@ -116,8 +116,8 @@ body{
 				}
 			}
 
-			#top-banner-2 {background: url('/stylesheets/images/BACKGROUND.pnG') no-repeat center  center; background-size:cover ;background-color: #000000;}
-			#top-banner-3 {background: url('/stylesheets/images/luis-reyes-mTorQ9gFfOg-unsplash.jpg') no-repeat center center; background-size: cover;}
+			#top-banner-2 {background: url('/stylesheets/images/cover9.png') no-repeat center center ; background-color: #000000;   background-size: 1680px 720px;}
+			#top-banner-3 {background: url('/stylesheets/images/cover8.png') no-repeat center center; background-color: #000000; background-size: cover;}
 		#top-banner-4 {background: url('/stylesheets/images/workoutsroutine.png') no-repeat center center; background-size: cover; background-color: #000000;
 			}
 			
@@ -153,20 +153,34 @@ body{
 			font-weight: 400;
 			cursor: pointer;
 			
-	
+	.label {
+		position: relative;
+		display: inline-block;
+		padding: 10px;
+		border: 1px solid #ccc;
+		cursor: pointer;
+		overflow: hidden;
+		text-transform: uppercase;
+		font-family: 'Monument Extended', sans-serif;
+		font-size: 0.9em;
+		color: #fff;
+		font-weight: 400;
+		margin-right: 10px;
+	}
 			
 			.progressbar {
 				position: absolute;
-
+				bottom: 0;
 				left: 0;
-				height: 1px;
-				width: 100%;
-				background:  #ffffff;
+				width: 0;
+				height:52px;
+				background: #f0dc0094; /* Color of the fill */
 				z-index: 100;
+				transition: width 3s ease-in-out; /* Animation duration */
 				
 			}
 			
-			&:hover {color: #b5d815;}
+			&:hover {color: #000000;}
 		}
 	}
 }
@@ -182,21 +196,23 @@ body{
 #banner3:checked ~ nav label:nth-of-type(3),
 #banner4:checked ~ nav label:nth-of-type(4) {
 	cursor: default;
+
 	color: var(--main-color);
 	transition: all .5s;
 }
+#banner1:checked ~ nav label:nth-of-type(1) .progressbar {
+    animation: progressBarFill 5s linear forwards;
+}
+
 #banner1:checked ~ nav label:nth-of-type(1) .progressbar,
 #banner2:checked ~ nav label:nth-of-type(2) .progressbar,
 #banner3:checked ~ nav label:nth-of-type(3) .progressbar,
-#banner4:checked ~ nav label:nth-of-type(4) .progressbar {
-	background: var(--main-color);
+#banner4:checked ~ nav label:nth-of-type(4) .progressbar
+{
+
+	width: 100%; /* Adjusted width to fill progress bar */ 
 }
-#banner1:checked ~ nav label:nth-of-type(1) .progressbar-fill,
-#banner2:checked ~ nav label:nth-of-type(2) .progressbar-fill,
-#banner3:checked ~ nav label:nth-of-type(3) .progressbar-fill,
-#banner4:checked ~ nav label:nth-of-type(4) .progressbar-fill {
-	animation: progressBarFill 5s linear;
-}
+
 }
 
 
@@ -237,7 +253,7 @@ z-index: -1;
 		
 		border: none;
 		
-		background:		 #b5d815;
+		background:		 #000000;
 		box-shadow: inset 0px 0px 0px 0px rgb(18, 6, 6);
 		transition: all 0.5s ease-in-out;		
 	
@@ -251,7 +267,7 @@ z-index: -1;
 		
 		border: none;
 		
-		background:		 #b5d815;
+		background:		 #000000;
 		box-shadow: inset 0px 0px 0px 0px rgb(18, 6, 6);
 		transition: all 0.5s ease-in-out;		
 		color: #404040;
@@ -319,7 +335,6 @@ border: none;
 	background: none;
 	position: relative;
 }
-
 
 
 
