--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -7,7 +7,6 @@
   <div class="bars" id="nav-action">
     <span class="bar"></span>
   </div>
-
   <!-- Navigatielist -->
   <nav id="nav">
     <ul class="navlist">
@@ -22,7 +21,7 @@
         <a href="/login">Login</a>
       </li>
       <li class="shape-circle circle-five">
-        <a href="/">Home</a>
+        <a href="/Home"> </a>
       </li>
     </ul>
   </nav>
