--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="/stylesheets/animationbar.css" /> 
 <link rel="stylesheet" href="stylesheets/heroslider.css" />
     <link rel="stylesheet" href="stylesheets/newhomepage.css" /> 
-
-    <link rel="stylesheet" href="stylesheets/scripts/footerraha.css">
+    <link rel="stylesheet" href="stylesheets/scripts/footerraha.css" />
   </head>
 
   <body>
 <header>
+  
    <!-- include maakt het overzichtelijker om alles toe te voegen-->
     <%-include ('nav.ejs')%> 
     <%- include('heroslider.ejs') %>
