--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -5,13 +5,13 @@
 <header>
   <!-- Hamburger-icoon -->
   <div class="bars" id="nav-action">
-    <span class="bar"></span>
+    <span class="bar"> </span>
   </div>
   <!-- Navigatielist -->
   <nav id="nav">
     <ul class="navlist">
       <li class="shape-circle circle-one">
-        <a href=/overzicht>Overzicht</a>
+        <a href="/overzicht">Overzicht</a>
       </li>
       <li class="shape-circle circle-two">
 <a href="/overzicht">
@@ -21,7 +21,7 @@
         <a href="/login">Login</a>
       </li>
       <li class="shape-circle circle-five">
-        <a href="/Home"> </a>
+        <a href="/"> home </a>
       </li>
     </ul>
   </nav>
